[package]
name = "rust_calculator"
version = "0.1.0"
authors = ["wyatto"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kiss3d = "0.23"
nalgebra = "0.20.0"
num = "0.2.1"
once_cell = "1.3.1"

[dependencies.kiss-ui]
git = "https://github.com/cybergeek94/kiss-ui"