[package]
name = "rust_calculator"
version = "0.1.0"
authors = ["wyatto"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kiss3d = "0.23"
nalgebra = "0.20.0"
num = "0.2.1"
gtk = "0.9.2"
gio = "0.9.1"
glib = "0.10.2"
once_cell = "1.4.1"
kas = "0.5.0"
kas-wgpu = "0.5.0"
kas-macros = "0.5.0"
kas-text = "0.1.4"
kas-theme = "0.5.0"
env_logger = "0.7.1"